Issue #50: Refactored the header recipe to use checkConfiguration